--- a/src/index.html
+++ b/src/index.html
@@ -33,9 +33,9 @@
                       Dropdown link
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Life on Mars</a></li>
+                      <li><a class="dropdown-item" href="#">Space Travel</a></li>
                       <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
                     </ul>
                   </li>
                 </ul>
@@ -68,7 +68,7 @@
               </div>
               <div class="col-sm">
                 <div class="card">
-                   <img src="../assets/colony.png" class="card-img-top" alt="Large Colony on the Moon">
+                   <img src="../assets/colony1.jpg" class="card-img-top" alt="Large Colony on the Moon">
                     <div class="card-body p-4">
                        <h5 class="card-title fw-bold">Card title</h5>
                         <p class="card-text">There is somthing here</p>
@@ -77,7 +77,7 @@
             </div>
             <div class="col-sm">
               <div class="card">
-                 <img src="../assets/colony.png" class="card-img-top" alt="Large Colony on the Moon">
+                 <img src="../assets/colony2.jpg" class="card-img-top" alt="Large Colony on the Moon">
                   <div class="card-body p-4">
                      <h5 class="card-title fw-bold">Card title</h5>
                       <p class="card-text">There is somthing here</p>
